--- a/templates/modality/create.html
+++ b/templates/modality/create.html
@@ -22,7 +22,10 @@
                             <img src="/static/images/mri.png" class="card-img-top" width="55" height="45">
                         </div>
                     </div>
-
+                    <div class="col-15">
+                        <h5 class="card-title">Neue Gerät einfügen</h5>
+                        <h6 class="card-subtitle"> Bitte beachten Sie, dass der AETitle einzigartig sein muss.</h6>
+                      </div>
                 </div>
 
             </div>
@@ -92,13 +95,13 @@
                 </div>
             </div>
 
+ <input type='submit' class="btn btn-outline-primary" value='Speichern'/>
+    <a href="{% url 'modalities' %}" class="btn btn-outline-primary">Abbrechen</a>
 
         </div>
     </div>
 
-    <input type='submit' class="btn btn-outline-primary" value='Speichern'/>
-    <a href="{% url 'modalities' %}" class="btn btn-outline-primary">Abbrechen</a>
-</form>
+   </form>
 {% endblock %}
 
  
