--- a/templates/modality/modality_list.html
+++ b/templates/modality/modality_list.html
@@ -18,7 +18,7 @@
       </div>
        
         <div class="col-15">
-          <h5 class="card-title">{{instance.ae_title}} {{ instance.id}}</h5>
+          <h5 class="card-title">AE-Title: {{instance.ae_title}} </h5>
         </div>
       </div>
     </div>
