--- a/templates/patient/patient_list.html
+++ b/templates/patient/patient_list.html
@@ -29,7 +29,7 @@
       </div>
     </div>
       <div class="col-15">
-        <h5 class="card-title">[ID: {{instance.id}}] {{instance.first_name}} {{ instance.second_name}}</h5>
+        <h5 class="card-title">{{instance.first_name}} {{ instance.second_name}}</h5>
       </div>
     </div>
   </div>
