before curapacs integration

--- a/templates/administration/create.html
+++ b/templates/administration/create.html
@@ -16,9 +16,9 @@
             </div>
           </div>
           <div class="col-10">
-            <h5 class="card-title">Informationen zu ihren Praxis</h5>
+            <h5 class="card-title">Informationen zu ihrer Praxis</h5>
              
-            <h6 class="card-subtitle"> Tragen Sie die passende Informationen in den Formular ein. Alle felder sind pflichtig</h6>
+            <h6 class="card-subtitle"> Tragen Sie die passende Informationen in das Formular ein.</h6>
          
  </div>
         </div>
@@ -30,7 +30,7 @@
            
             <div class="row">
               <div class="col">
-                <label>Betriebsname: </label>
+                <label>Filialname: </label>
               </div>
               <div class="col">
                 {{form.name}}
@@ -48,7 +48,7 @@
           <br>
             <div class="row">
               <div class="col">
-                <label>Hausnr.: </label>
+                <label>Hausnummer: </label>
               </div>
               <div class="col">
                 {{form.number}}
@@ -58,7 +58,7 @@
           <br>
             <div class="row">
               <div class="col">
-                <label>Stadt: </label>
+                <label>Ort: </label>
               </div>
               <div class="col">
                 {{form.city}}
@@ -76,7 +76,7 @@
           <br>
             <div class="row">
               <div class="col">
-                <label>Telefon Nr.: </label>
+                <label>Telefonnummer: </label>
               </div>
               <div class="col">
                 {{form.telefon_number}}
