--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,7 @@
               aria-haspopup="true" aria-expanded="false">Administration</button>
             <div class="dropdown-menu" aria-labelledby="dropdownAdminButton"> 
               <a class="dropdown-item" href="{% url 'locationCreate' %}">Standort konfigurieren </a>
-              <a class="dropdown-item" href="{% url 'administration' %}">Standortliste</a>
+              <a class="dropdown-item" href="{% url 'administration' %}">Standorte anzeigen</a>
           </div>
           </li>
           
