--- a/templates/administration/location_list.html
+++ b/templates/administration/location_list.html
@@ -29,8 +29,8 @@
               <div class="container">
                 <ul class="list-group list-group-flush"> 
                 <li class="list-group-item">Adresse: {{ object.street }},  {{ object.number }}</li>
-                <li class="list-group-item">Stadt: {{ object.city }}, {{ object.plz }}</li>
-                <li class="list-group-item">Telefon nummer: {{ object.telefon_number }}</li>
+                <li class="list-group-item">Ort: {{ object.city }}, {{ object.plz }}</li>
+                <li class="list-group-item">Telefonnummer: {{ object.telefon_number }}</li>
               </ul>
               </div>
             </div>
